[gd_scene load_steps=6 format=3 uid="uid://idt1we5ex6dt"]

[ext_resource type="Script" path="res://car.gd" id="1_6ghhe"]
[ext_resource type="ArrayMesh" uid="uid://ccxvscbhrx4r7" path="res://taxi.res" id="1_wmvid"]
[ext_resource type="PackedScene" uid="uid://b4tn0lks32rcn" path="res://wheel.tscn" id="3_64s7a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5jt0p"]
size = Vector3(1.3, 0.6, 2.7)

[sub_resource type="BoxShape3D" id="BoxShape3D_gnp03"]
size = Vector3(0.9, 0.5, 0.9)

[node name="car" type="RigidBody3D"]
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.15, 0)
script = ExtResource("1_6ghhe")

[node name="collision_shape_1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
shape = SubResource("BoxShape3D_5jt0p")

[node name="collision_shape_2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0.199)
shape = SubResource("BoxShape3D_gnp03")

[node name="body_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
mesh = ExtResource("1_wmvid")

[node name="front_left_wheel" parent="." instance=ExtResource("3_64s7a")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.325, 0.4, -0.76)
side = 0
turning_center_offset = Vector2(-0.325, 1.52)

[node name="front_right_wheel" parent="." instance=ExtResource("3_64s7a")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.325, 0.4, -0.76)
turning_center_offset = Vector2(0.325, 1.52)

[node name="rear_left_wheel" parent="." instance=ExtResource("3_64s7a")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.325, 0.4, 0.76)
side = 0
is_powered = false
is_steering = false

[node name="rear_right_wheel" parent="." instance=ExtResource("3_64s7a")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.325, 0.4, 0.76)
is_powered = false
is_steering = false
